# template_structured

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: EDA.ipynb  EDA_result.json  baseline.ipynb  inference.py  logistic_train.py  sampling.ipynb  svm_train.py  toch_train.py  train.py  train_lgb.py  train_lgr.py  train_mlp.py  train_svm.py  train_xgb.py  xgboost_.py
src/configs/: __init__.py  config_builder.py  environments.py
src/configs/experiments/: __init__.py  base.py  exp_0.py  exp_1.py  exp_2.py  exp_3.py  exp_4.py  exp_5.py  exp_6.py  exp_7.py  exp_lgb_base.py  exp_lgr_base.py  exp_mlp_base.py  exp_svm_base.py  exp_xgb_base.py
src/data/: __init__.py  base.py  data_loader.py  dataset_loaninfo.py  dataset_mlp.py
src/data/node/: __init__.py  base.py  common.py  pubsub.py
src/data/process/: __init__.py  base.py  pipeline_0.py  pipeline_1.py
src/data/set/: __init__.py  lgbset.py  lgrset.py  svmset.py
src/data/source/: __init__.py  api.py  api_httpx.py  base.py  csv.py  csvfile.py  dbsystem.py  filesystem.py  objstorage.py
src/dataset/: base.py  data_loader.py  dataset_loaninfo.py
src/dataset/node/: common.py
src/dataset/source/: base.py  filesystem.py
src/machine/: __init__.py  adaptor_lgb.py  adaptor_lgr.py  adaptor_mlp.py  adaptor_svm.py  adaptor_xgb.py  base.py  pytorch.py  scikit.py  xgboost.py
src/ml/: callbacks.py  mlflow_tracker.py  trainer.py
src/model/: __init__.py  base.py  lgb.py  lgbm.py  lightening.py  pytorch.py  scikit.py  xgboost.py
src/utils/: logger.py  mlflow_callback.py  now.py
(+14 files in other folders)
