[project]
name = "template-structured"
version = "0.1.0"
description = ""
authors = [
    {name = "lgh",email = "lghmk2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "mlflow (>=2.21.2,<3.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
